Add ResearchOutput UUID to the research_output tab, users & client can now get a plan with one RO through the API
