# engines/madmp_opidor/app/controllers/api/v1/madmp/plans_controller.rb
@@ -7,15 +7,22 @@ module Api
       class PlansController < BaseApiController
         respond_to :json
         include MadmpExportHelper
-        # GET /api/v1/madmp/plans/:id
-        # rubocop:disable Metrics/AbcSize
+        # GET /api/v1/madmp/plans/:id(/research_outputs/:uuid)
+        # GET /api/v1/madmp/plans/research_outputs/:uuid
+        # rubocop:disable Metrics/AbcSize, Metrics/MethodLength
         def show
-          plan = Api::V1::PlansPolicy::Scope.new(client, Plan).resolve
-                                            .find(params[:id])
+          if params[:id].present?
+            plan = Api::V1::PlansPolicy::Scope.new(client, Plan).resolve.find(params[:id])
+            selected_research_outputs = plan.research_output_ids
+          else
+            plan = Plan.joins(:research_outputs)
+                       .where(research_outputs: { uuid: params[:uuid] }).first
+            plan.add_api_client!(client) if client.is_a?(ApiClient)
+            selected_research_outputs = plan.research_outputs.where(uuid: params[:uuid]).pluck(:id)
+          end
 
           plan_fragment = plan.json_fragment
           export_format = params[:export_format]
-          selected_research_outputs = query_params[:research_outputs]&.map(&:to_i) || plan.research_output_ids
           respond_to do |format|
             format.json
             if export_format.eql?('rda')
@@ -32,7 +39,7 @@ module Api
         rescue ActiveRecord::RecordNotFound
           render_error(errors: [_('Plan not found')], status: :not_found)
         end
-        # rubocop:enable Metrics/AbcSize
+        # rubocop:enable Metrics/AbcSize, Metrics/MethodLength
 
         # rubocop:disable Metrics/AbcSize, Metrics/MethodLength
         # rubocop:disable Metrics/CyclomaticComplexity, Metrics/PerceivedComplexity
